Bug 274466 - Dragging windows somehow broken in multi screen setup with no panel on one screen
Summary: Dragging windows somehow broken in multi screen setup with no panel on one sc...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: core (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-29 22:56 UTC by Kai Uwe Broulik
Modified: 2012-06-18 20:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Position where window hangs (246.26 KB, image/png)
2011-05-29 22:56 UTC, Kai Uwe Broulik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2011-05-29 22:56:20 UTC
Created attachment 60449 [details]
Position where window hangs

Version:           unspecified (using Devel) 
OS:                Linux

I have set up a testing KDE environment and I use a two monitor configuration. I have a panel on the left screen but none on the other. When I drag a window to the top corner center of the right screen (where there is no panel) so that the outline for maximizing a window completely appears, then I drag it over to the left monitor while keeping the mouse at the top, then the outline changes to “maximize to top left corner of screen”, then you move it over to the left screen and the outline moves there as well. It is fine till then, but if you move it further, then the window just hangs there about a fifth on the right screen and the rest on the left screen.
If you move it down, away from the top corner, it will jump to the cursor position as if you moved it there directly.
If you add a panel to the right monitor as well or remove (or move it somewhere else) the panel on the left monitor it works just fine. Also works vice versa i.e. panel on right screen and none on left screen.
Moving the window from the screen where the panel is to the screen where no panel is, works as expected.

Reproducible: Didn't try
Comment 1 Martin Flöser 2011-06-02 10:15:47 UTC
very interesting bug
Comment 2 Thomas Lübking 2012-03-11 03:03:46 UTC
This is not related or caused by electric border maximization, but because the window runs into invalid position during a restricted moveResize, ie. alt+lmb moving will just work while titlebar dragging won't - quick maximization / tiling or not.

We just need to figure *where* it is restricted and why it's not snapped into the moveResize area =)
Comment 3 Thomas Lübking 2012-03-11 22:42:11 UTC
You can try this patch (well, actually it would be nice if you didd ;-)
https://git.reviewboard.kde.org/r/104233/
Comment 4 Thomas Lübking 2012-03-14 01:41:54 UTC
Git commit 638a839ecd2569bdc2c13d3b2cb2892c87baa72e by Thomas Lübking.
Committed on 11/03/2012 at 23:12.
Pushed by luebking into branch 'master'.

Sanitize position on screen changes with different struts
REVIEW: 104233

M  +22   -6    kwin/geometry.cpp

http://commits.kde.org/kde-workspace/638a839ecd2569bdc2c13d3b2cb2892c87baa72e
Comment 5 Thomas Lübking 2012-06-18 20:25:26 UTC
Git commit 33ffe90128df6ae038b27bd9c9371acacaeee098 by Thomas Lübking.
Committed on 13/06/2012 at 19:38.
Pushed by luebking into branch 'master'.

fix window postition on varying screen struts better
Related: bug 301805
FIXED-IN: 4.9

M  +31   -20   kwin/geometry.cpp

http://commits.kde.org/kde-workspace/33ffe90128df6ae038b27bd9c9371acacaeee098