Sanitize position on screen changes with different struts

BUG: 274466
REVIEW: 104233